--- a/Tyuiu.VolodinaAA.Sprint6.TaskReview.V17/FormMain.resx
+++ b/Tyuiu.VolodinaAA.Sprint6.TaskReview.V17/FormMain.resx
@@ -120,7 +120,7 @@
   <data name="labelTask_VAA.Text" xml:space="preserve">
     <value>Дан целочисленный двумерный массив N (N&gt;1) на M (M&gt;1) элементов, заполненный случайными числами в заданном диапазоне (от n1 до n2) с чередованием через два значения произведением двух предыдущих значений в столбцах.
 
-Найти произведение значений из его элементов с чётными номерами от K до L включительно в заданной строке R.
+Найти произведение значений из его элементов с чётными номерами от K до (с нуля)  включительно в заданной строке R.
 
 Произвести проверку на корректность ввода значений
 </value>
